--- a/newGizaClub/package.json
+++ b/newGizaClub/package.json
@@ -21,9 +21,11 @@
         "@angular/platform-browser": "4.1.3",
         "@angular/platform-browser-dynamic": "4.1.3",
         "@ionic-native/core": "3.12.1",
+        "@ionic-native/photo-viewer": "^3.13.1",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
+        "com-sarriaroman-photoviewer": "^1.1.10",
         "cordova-android": "^6.2.3",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-console": "^1.0.5",
@@ -40,6 +42,7 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "1.3.12",
+        "@ionic/cli-plugin-cordova": "1.4.0",
         "@ionic/cli-plugin-ionic-angular": "1.3.1",
         "typescript": "2.3.4"
     },
@@ -51,7 +54,8 @@
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "com-sarriaroman-photoviewer": {}
         },
         "platforms": [
             "android",
