--- a/newGizaClub/package.json
+++ b/newGizaClub/package.json
@@ -35,6 +35,7 @@
         "cordova-plugin-whitelist": "^1.3.1",
         "ionic-angular": "3.5.0",
         "ionic-plugin-keyboard": "^2.2.1",
+        "ionic2-super-tabs": "^3.0.2",
         "ionicons": "3.0.0",
         "rxjs": "5.4.0",
         "sw-toolbox": "3.6.0",
