--- a/newGizaClub/package.json
+++ b/newGizaClub/package.json
@@ -12,20 +12,25 @@
         "ionic:serve": "ionic-app-scripts serve"
     },
     "dependencies": {
-        "@angular/common": "4.1.3",
-        "@angular/compiler": "4.1.3",
-        "@angular/compiler-cli": "4.1.3",
-        "@angular/core": "4.1.3",
-        "@angular/forms": "4.1.3",
-        "@angular/http": "4.1.3",
-        "@angular/platform-browser": "4.1.3",
-        "@angular/platform-browser-dynamic": "4.1.3",
+        "@angular/animations": "^4.3.0",
+        "@angular/common": "^4.3.0",
+        "@angular/compiler": "^4.3.0",
+        "@angular/compiler-cli": "^4.3.0",
+        "@angular/core": "^4.3.0",
+        "@angular/forms": "^4.3.0",
+        "@angular/http": "^4.3.0",
+        "@angular/platform-browser": "^4.3.0",
+        "@angular/platform-browser-dynamic": "^4.3.0",
+        "@angular/platform-server": "^4.3.0",
+        "@angular/router": "^4.3.0",
+        "@angular/tsc-wrapped": "^4.3.0",
         "@ionic-native/core": "3.12.1",
         "@ionic-native/photo-viewer": "^3.13.1",
         "@ionic-native/sms": "^4.0.0",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
+        "autoprefixer": "^7.1.2",
         "cordova-android": "^6.2.3",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-console": "^1.0.5",
@@ -39,7 +44,7 @@
         "ionic-plugin-keyboard": "^2.2.1",
         "ionic2-super-tabs": "^3.0.2",
         "ionicons": "3.0.0",
-        "rxjs": "5.4.0",
+        "rxjs": "^5.4.2",
         "sw-toolbox": "3.6.0",
         "zone.js": "0.8.12"
     },
@@ -47,7 +52,7 @@
         "@ionic/app-scripts": "1.3.12",
         "@ionic/cli-plugin-cordova": "1.4.1",
         "@ionic/cli-plugin-ionic-angular": "1.3.2",
-        "typescript": "2.3.4"
+        "typescript": "^2.4.1"
     },
     "description": "An Ionic project",
     "cordova": {
