--- a/newGizaClub/tsconfig.json
+++ b/newGizaClub/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "skipLibCheck": true,
+    "noStrictGenericChecks": true,
     "allowSyntheticDefaultImports": true,
     "declaration": false,
     "emitDecoratorMetadata": true,
@@ -8,9 +10,11 @@
       "dom",
       "es2015"
     ],
-    "module": "es2015",
+    "module": "commonjs",
     "moduleResolution": "node",
+    "noImplicitAny": true,
     "sourceMap": true,
+     "suppressImplicitAnyIndexErrors": true,
     "target": "es5"
   },
   "include": [
