--- a/newGizaClub/package.json
+++ b/newGizaClub/package.json
@@ -24,6 +24,7 @@
         "@angular/platform-server": "^4.3.0",
         "@angular/router": "^4.3.0",
         "@angular/tsc-wrapped": "^4.3.0",
+        "@ionic-native/android-permissions": "^4.0.1",
         "@ionic-native/core": "3.12.1",
         "@ionic-native/photo-viewer": "^3.13.1",
         "@ionic-native/sms": "^4.0.0",
@@ -33,6 +34,7 @@
         "autoprefixer": "^7.1.2",
         "cordova-android": "^6.2.3",
         "cordova-ios": "^4.4.0",
+        "cordova-plugin-android-permissions": "^1.0.0",
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-crosswalk-webview": "^2.3.0",
         "cordova-plugin-device": "^1.1.4",
@@ -70,7 +72,8 @@
                 "XWALK_MODE": "embedded",
                 "XWALK_MULTIPLEAPK": "true"
             },
-            "cordova-sms-plugin": {}
+            "cordova-sms-plugin": {},
+            "cordova-plugin-android-permissions": {}
         },
         "platforms": [
             "android",
