--- a/newGizaClub/package.json
+++ b/newGizaClub/package.json
@@ -25,6 +25,8 @@
         "@angular/router": "^4.3.0",
         "@angular/tsc-wrapped": "^4.3.0",
         "@ionic-native/android-permissions": "^4.0.1",
+        "@ionic-native/camera": "^4.0.1",
+        "@ionic-native/camera-preview": "^4.0.1",
         "@ionic-native/core": "3.12.1",
         "@ionic-native/photo-viewer": "^3.13.1",
         "@ionic-native/sms": "^4.0.0",
@@ -35,6 +37,9 @@
         "cordova-android": "^6.2.3",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-android-permissions": "^1.0.0",
+        "cordova-plugin-camera": "^2.4.1",
+        "cordova-plugin-camera-preview": "^0.9.0",
+        "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-crosswalk-webview": "^2.3.0",
         "cordova-plugin-device": "^1.1.4",
@@ -73,7 +78,12 @@
                 "XWALK_MULTIPLEAPK": "true"
             },
             "cordova-sms-plugin": {},
-            "cordova-plugin-android-permissions": {}
+            "cordova-plugin-android-permissions": {},
+            "cordova-plugin-camera": {
+                "CAMERA_USAGE_DESCRIPTION": " ",
+                "PHOTOLIBRARY_USAGE_DESCRIPTION": " "
+            },
+            "cordova-plugin-camera-preview": {}
         },
         "platforms": [
             "android",
