--- a/newGizaClub/package.json
+++ b/newGizaClub/package.json
@@ -28,6 +28,7 @@
         "@ionic-native/camera": "^4.0.1",
         "@ionic-native/camera-preview": "^4.0.1",
         "@ionic-native/core": "3.12.1",
+        "@ionic-native/native-storage": "^4.0.1",
         "@ionic-native/photo-viewer": "^3.13.1",
         "@ionic-native/sms": "^4.0.0",
         "@ionic-native/splash-screen": "3.12.1",
@@ -43,6 +44,7 @@
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-crosswalk-webview": "^2.3.0",
         "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-nativestorage": "^2.2.2",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
@@ -83,7 +85,8 @@
                 "CAMERA_USAGE_DESCRIPTION": " ",
                 "PHOTOLIBRARY_USAGE_DESCRIPTION": " "
             },
-            "cordova-plugin-camera-preview": {}
+            "cordova-plugin-camera-preview": {},
+            "cordova-plugin-nativestorage": {}
         },
         "platforms": [
             "android",
