--- a/newGizaClub/package.json
+++ b/newGizaClub/package.json
@@ -53,6 +53,7 @@
         "ionic-plugin-keyboard": "^2.2.1",
         "ionic2-super-tabs": "^3.0.2",
         "ionicons": "3.0.0",
+        "resemblejs": "^2.2.4",
         "rxjs": "^5.4.2",
         "sw-toolbox": "3.6.0",
         "zone.js": "0.8.12"
