--- a/newGizaClub/package.json
+++ b/newGizaClub/package.json
@@ -25,6 +25,7 @@
         "@angular/router": "^4.3.0",
         "@angular/tsc-wrapped": "^4.3.0",
         "@ionic-native/android-permissions": "^4.0.1",
+        "@ionic-native/base64-to-gallery": "^4.1.0",
         "@ionic-native/camera": "^4.0.1",
         "@ionic-native/camera-preview": "^4.0.1",
         "@ionic-native/core": "3.12.1",
@@ -36,6 +37,7 @@
         "@ionic/storage": "2.0.1",
         "autoprefixer": "^7.1.2",
         "cordova-android": "^6.2.3",
+        "cordova-base64-to-gallery": "^4.1.2",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-android-permissions": "^1.0.0",
         "cordova-plugin-camera": "^2.4.1",
@@ -87,7 +89,8 @@
                 "PHOTOLIBRARY_USAGE_DESCRIPTION": " "
             },
             "cordova-plugin-camera-preview": {},
-            "cordova-plugin-nativestorage": {}
+            "cordova-plugin-nativestorage": {},
+            "cordova-base64-to-gallery": {}
         },
         "platforms": [
             "android",
