--- a/newGizaClub/package.json
+++ b/newGizaClub/package.json
@@ -12,17 +12,17 @@
         "ionic:serve": "ionic-app-scripts serve"
     },
     "dependencies": {
-        "@angular/animations": "^4.3.0",
-        "@angular/common": "^4.3.0",
-        "@angular/compiler": "^4.3.0",
-        "@angular/compiler-cli": "^4.3.0",
-        "@angular/core": "^4.3.0",
-        "@angular/forms": "^4.3.0",
-        "@angular/http": "^4.3.0",
-        "@angular/platform-browser": "^4.3.0",
-        "@angular/platform-browser-dynamic": "^4.3.0",
-        "@angular/platform-server": "^4.3.0",
-        "@angular/router": "^4.3.0",
+        "@angular/animations": "^4.4.3",
+        "@angular/common": "^4.4.3",
+        "@angular/compiler": "^4.4.3",
+        "@angular/compiler-cli": "^4.4.3",
+        "@angular/core": "^4.4.3",
+        "@angular/forms": "^4.4.3",
+        "@angular/http": "^4.4.3",
+        "@angular/platform-browser": "^4.4.3",
+        "@angular/platform-browser-dynamic": "^4.4.3",
+        "@angular/platform-server": "^4.4.3",
+        "@angular/router": "^4.4.3",
         "@angular/tsc-wrapped": "^4.3.0",
         "@ionic-native/android-permissions": "^4.0.1",
         "@ionic-native/base64-to-gallery": "^4.1.0",
@@ -41,7 +41,7 @@
         "autoprefixer": "^7.1.2",
         "cordova-android": "^6.2.3",
         "cordova-base64-to-gallery": "^4.1.2",
-        "cordova-ios": "^4.4.0",
+        "cordova-ios": "^4.5.1",
         "cordova-plugin-android-permissions": "^1.0.0",
         "cordova-plugin-camera": "^2.4.1",
         "cordova-plugin-camera-preview": "^0.9.0",
@@ -69,8 +69,8 @@
         "@ionic/app-scripts": "1.3.12",
         "@ionic/cli-plugin-cordova": "1.6.2",
         "@ionic/cli-plugin-ionic-angular": "1.4.1",
-        "ionic": "3.10.3",
-        "typescript": "^2.4.1"
+        "ionic": "3.12.0",
+        "typescript": "^2.5.2"
     },
     "description": "An Ionic project",
     "cordova": {
@@ -95,8 +95,7 @@
             "cordova-plugin-filepath": {}
         },
         "platforms": [
-            "android",
-            "ios"
+            "android"
         ]
     }
 }
